@@ -255,6 +255,12 @@ to send input to it is via the input and inputstring attributes.</p>
       via filelists.  <em>Since Ant 1.6.2.</em></td>
     <td align="center" valign="top">No, default is <i>true</i></td>
   </tr>
+  <tr>
+    <td valign="top">overwrite</td>
+    <td valign="top">Whether to bypass timestamp comparisons
+      for target files.  <em>Since Ant 1.7.</em></td>
+    <td align="center" valign="top">No, default is <i>false</i></td>
+  </tr>
 </table>
 <h3>Parameters specified as nested elements</h3>
 <h4>fileset</h4>
