@@ -313,10 +313,7 @@
         </apply>
     </target>
 
-    <target name="ignoremissing" depends="init,xyz" if="echo.can.run">
-        <filelist id="xylist" dir="${basedir}" files="x,y" />
-        <delete file="z" />
-
+    <target name="pad">
         <condition property="pad" value="">
             <or>
                 <not>
@@ -340,6 +337,12 @@
                 </or>
             </and>
         </condition>
+
+    </target>
+
+    <target name="ignoremissing" depends="init,xyz,pad" if="echo.can.run">
+        <filelist id="xylist" dir="${basedir}" files="x,y" />
+        <delete file="z" />
 
         <pathconvert property="xy" pathsep="${pad}${line.separator}">
             <path>
@@ -369,6 +372,34 @@
                     <and>
                         <equals arg1="${xy}${pad}" arg2="${ignoretrue}" />
                         <equals arg1="${xyz}${pad}" arg2="${ignorefalse}" />
+                    </and>
+                </not>
+            </condition>
+        </fail>
+    </target>
+
+    <target name="overwrite" depends="init,xyz,pad" if="echo.can.run">
+        <presetdef name="ekko">
+            <apply executable="echo" append="true" dest="${basedir}">
+                <filelist refid="xyzlist" />
+                <mapper type="identity" />
+            </apply>
+        </presetdef>
+
+        <pathconvert property="xyz" pathsep="${pad}${line.separator}">
+            <path>
+                <filelist refid="xyzlist" />
+            </path>
+        </pathconvert>
+
+        <ekko outputproperty="foo" />
+        <ekko outputproperty="bar" overwrite="true" />
+        <fail>
+            <condition>
+                <not>
+                    <and>
+                        <equals arg1="${foo}" arg2="" />
+                        <equals arg1="${bar}" arg2="${xyz}" />
                     </and>
                 </not>
             </condition>
